@@ -6,21 +6,20 @@
 
     <groupId>org.example</groupId>
     <artifactId>re</artifactId>
-    <version>2024.0.4</version>
+    <version>2024.0.5</version>
 
     <properties>
-        <maven.compiler.release>22</maven.compiler.release>
+        <maven.compiler.release>23</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hutool.version>5.8.27</hutool.version>
-        <kala.version>0.70.0</kala.version>
-        <org.mapstruct.version>1.6.0.Beta1</org.mapstruct.version>
+        <kala.version>0.72.0</kala.version>
         <slf4j.version>2.0.13</slf4j.version>
-        <logback.version>1.5.5</logback.version>
-        <guava.version>33.1.0-jre</guava.version>
-        <fastjson.version>2.0.49</fastjson.version>
-        <jackson.version>2.17.0</jackson.version>
-        <http-components.version>5.3.1</http-components.version>
-        <okhttp.version>5.0.0-alpha.12</okhttp.version>
+        <logback.version>1.5.6</logback.version>
+        <guava.version>33.2.0-jre</guava.version>
+        <fastjson.version>2.0.50</fastjson.version>
+        <jackson.version>2.17.1</jackson.version>
+        <http-components.version>5.4-alpha2</http-components.version>
+        <okhttp.version>5.0.0-alpha.14</okhttp.version>
     </properties>
 
     <dependencyManagement>
@@ -33,7 +32,7 @@
             <dependency>
                 <groupId>org.junit</groupId>
                 <artifactId>junit-bom</artifactId>
-                <version>5.10.2</version>
+                <version>5.11.0-M1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -64,6 +63,11 @@
             <version>2.16.1</version>
         </dependency>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.17.0</version>
+        </dependency>
+        <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>${hutool.version}</version>
@@ -87,11 +91,6 @@
             <groupId>org.agrona</groupId>
             <artifactId>agrona</artifactId>
             <version>1.21.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.choco-solver</groupId>
-            <artifactId>choco-solver</artifactId>
-            <version>4.10.14</version>
         </dependency>
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
@@ -141,16 +140,6 @@
             <version>${http-components.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.googlecode.aviator</groupId>
-            <artifactId>aviator</artifactId>
-            <version>5.4.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>${org.mapstruct.version}</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
@@ -186,12 +175,6 @@
             <artifactId>jackson-dataformat-csv</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.j2html</groupId>
-            <artifactId>j2html</artifactId>
-            <version>1.6.0</version>
-        </dependency>
-
         <!-- logback -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -213,13 +196,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.mapstruct</groupId>
-                            <artifactId>mapstruct-processor</artifactId>
-                            <version>${org.mapstruct.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
+                    <showDeprecation>true</showDeprecation>
+                    <compilerArgs>
+                        <compilerArg>--enable-preview</compilerArg>
+                        <compilerArg>--add-modules=jdk.incubator.vector</compilerArg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
